# livny_health

./: .README.md.swp  .clinerules  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
.claude/: API_CONTRACTS.md  BFF_PATTERNS.md  COMPONENT_PATTERNS.md  DESIGN_SYSTEM.md  DOMAIN_LOGIC.md  README.md  SERVICE_PATTERNS.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: epic.md  user_story.md
.github/workflows/: test.yml
backend/bff/: README.md  main.py  pyproject.toml  pytest.ini
backend/bff/tests/: conftest.py
backend/bff/tests/unit/: test_patient_endpoints.py
backend/services/: README.md  allergy_checker.py  dosing_data.py  fake_data.py  main.py  pyproject.toml  pytest.ini  rxnorm.py
backend/services/tests/: conftest.py
backend/services/tests/unit/: test_allergy_checker.py  test_dosing_data.py  test_medication_endpoints.py  test_patient_endpoints.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/.claude/: COMPONENT_EXAMPLES.md
frontend/livyny_health/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts  medicationApi.ts  mockData.ts  patientApi.ts
frontend/src/components/medication/: ActiveMedicationsList.tsx  index.ts
frontend/src/components/patient/: AllergyBanner.tsx  index.ts
frontend/src/pages/: LoginPage.tsx  PatientChartPage.tsx  PatientListPage.tsx  PrescribePage.tsx  index.ts
frontend/src/types/: index.ts  medication.ts  patient.ts  user.ts
frontend/src/utils/: cn.ts  quantityCalculator.ts  unitConversion.test.ts  unitConversion.ts
(+7 files in other folders)
